将标识替换为lazygpt

--- a/docSite/content/docs/development/upgrading/41.md
+++ b/docSite/content/docs/development/upgrading/41.md
@@ -1,6 +1,6 @@
 ---
 title: '升级到 V4.1'
-description: 'FastGPT 从旧版本升级到 V4.1 操作指南'
+description: 'LazyGPT 从旧版本升级到 V4.1 操作指南'
 icon: 'upgrade'
 draft: false
 toc: true
