--- a/docSite/content/docs/development/upgrading/445.md
+++ b/docSite/content/docs/development/upgrading/445.md
@@ -1,6 +1,6 @@
 ---
 title: 'V4.4.5(需要初始化)'
-description: 'FastGPT V4.4.5 更新'
+description: 'LazyGPT V4.4.5 更新'
 icon: 'upgrade'
 draft: false
 toc: true
