--- a/docSite/content/docs/development/upgrading/447.md
+++ b/docSite/content/docs/development/upgrading/447.md
@@ -1,6 +1,6 @@
 ---
 title: 'V4.4.7（需执行升级脚本）'
-description: 'FastGPT V4.4.7 更新（需执行升级脚本）'
+description: 'LazyGPT V4.4.7 更新（需执行升级脚本）'
 icon: 'upgrade'
 draft: false
 toc: true
