--- a/docSite/content/docs/development/upgrading/451.md
+++ b/docSite/content/docs/development/upgrading/451.md
@@ -1,6 +1,6 @@
 ---
 title: 'V4.5.1(需进行初始化)'
-description: 'FastGPT V4.5.1 更新'
+description: 'LazyGPT V4.5.1 更新'
 icon: 'upgrade'
 draft: false
 toc: true
