--- a/docSite/content/docs/development/upgrading/465.md
+++ b/docSite/content/docs/development/upgrading/465.md
@@ -1,6 +1,6 @@
 ---
 title: 'V4.6.5（需要改配置文件）'
-description: 'FastGPT V4.6.5'
+description: 'LazyGPT V4.6.5'
 icon: 'upgrade'
 draft: false
 toc: true
@@ -9,7 +9,7 @@ weight: 831
 
 ## 配置文件变更
 
-由于 openai 已开始弃用 function call，改为 toolChoice。FastGPT 同步的修改了对于的配置和调用方式，需要对配置文件做一些修改：
+由于 openai 已开始弃用 function call，改为 toolChoice。LazyGPT 同步的修改了对于的配置和调用方式，需要对配置文件做一些修改：
 
 [点击查看最新的配置文件](/docs/development/configuration/)
 
