--- a/docSite/content/docs/development/upgrading/466.md
+++ b/docSite/content/docs/development/upgrading/466.md
@@ -1,6 +1,6 @@
 ---
 title: 'V4.6.6（需要改配置文件）'
-description: 'FastGPT V4.6.6'
+description: 'LazyGPT V4.6.6'
 icon: 'upgrade'
 draft: false
 toc: true
